--- a/discovery_piscine/cell03/ex04/ex00bis/backgroound.css
+++ b/discovery_piscine/cell03/ex04/ex00bis/backgroound.css
@@ -1,2 +1,19 @@
-body { height: 100vh; display: flex; justify-content: center; align-items: center; margin: 0; }
-button { padding: 20px 40px; font-size: 20px; cursor: pointer; }
+body {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+button {
+    padding: 15px 30px;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid #333;
+    border-radius: 5px;
+}
+
+button:active {
+    transform: translate(4px, 4px);
+}
